--- a/g4f/gui/client/html/index.html
+++ b/g4f/gui/client/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0">
     <meta name="description" content="聞いて、学んで、挑戦する対話型AIシステム">
-    <meta property="og:title" content="ChatGPT">
+    <meta property="og:title" content="ChatGPTv1.0">
     <meta property="og:image" content="https://openai.com/content/images/2022/11/ChatGPT.jpg">
     <meta property="og:description" content="聞いて、学んで、挑戦する対話型AIシステム">
     <meta property="og:url" content="https://g4f.ai">
